--- a/form-style.css
+++ b/form-style.css
@@ -50,7 +50,8 @@ h5 {
 a {
     text-decoration: none;
     font-size: 13.33px;
-    color: #20252f;
+    color: dodgerblue;
+    text-align: center;
 }
 p {
     font-family: sans-serif;
